--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+HangmanGame/HangmanGame/scores.txt
+HangmanGame/HangmanGame/high_score.txt
