Adds longVars.cs class to the project file

--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,4 @@ __pycache__/
 *.pyc
 HangmanGame/HangmanGame/scores.txt
 HangmanGame/HangmanGame/high_score.txt
+HangmanGame/HangmanGame/high_score.txt
